add another bunch of art

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<img src="https://raw.githubusercontent.com/gliscowo/install-roughly-enough-items-to-use-alloy-forgery/main/af%20install%20based.png"/>
+<img src="https://raw.githubusercontent.com/gliscowo/install-roughly-enough-items-to-use-alloy-forgery/main/af%20install%20based.png" alt="wait where did the install guide go"/>
+<img src="https://raw.githubusercontent.com/gliscowo/install-roughly-enough-items-to-use-alloy-forgery/main/cursed_froge.gif" alt="nooooo the froggeee"/>
