add helpful help link

--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <img src="https://raw.githubusercontent.com/gliscowo/install-roughly-enough-items-to-use-alloy-forgery/main/af%20install%20based.png" alt="wait where did the install guide go"/>
 <img src="https://raw.githubusercontent.com/gliscowo/install-roughly-enough-items-to-use-alloy-forgery/main/cursed_froge.gif" alt="nooooo the froggeee"/>
+
+<a href="https://discord.gg/2YXJE94X6F"><h3>if you're still confused join our epic server</h3></a>
