--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<img src="https://raw.githubusercontent.com/gliscowo/install-roughly-enough-items-to-use-alloy-forgery/main/af%20install%20based.png" alt="wait where did the install guide go"/>
-<img src="https://raw.githubusercontent.com/gliscowo/install-roughly-enough-items-to-use-alloy-forgery/main/cursed_froge.gif" alt="nooooo the froggeee"/>
+<head>
+  <meta property="og:title" content="metal furnace mod" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://install-roughly-enough-items-to-use-alloy-forgery.xyz/" />
+  <meta property="og:image" content="https://github.com/gliscowo/install-roughly-enough-items-to-use-alloy-forgery/blob/main/af%20icon.png?raw=true" />
+  <meta property="og:description" content="dura-chan would not be happy to see this" />
+</head>
 
-<a href="https://discord.gg/2YXJE94X6F"><h3>if you're still confused join our epic server</h3></a>
+<body>
+  <img src="https://raw.githubusercontent.com/gliscowo/install-roughly-enough-items-to-use-alloy-forgery/main/af%20install%20based.png" alt="wait where did the install guide go"/>
+  <img src="https://raw.githubusercontent.com/gliscowo/install-roughly-enough-items-to-use-alloy-forgery/main/cursed_froge.gif" alt="nooooo the froggeee"/>
+
+  <a href="https://discord.gg/2YXJE94X6F"><h3>if you're still confused join our epic server</h3></a>  
+</body>
