fix html tag business

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
   <meta property="og:title" content="metal furnace mod" />
   <meta property="og:type" content="website" />
@@ -12,3 +13,4 @@
 
   <a href="https://discord.gg/2YXJE94X6F"><h3>if you're still confused join our epic server</h3></a>  
 </body>
+</html>
